--- a/src/app/_components/details/details.component.scss
+++ b/src/app/_components/details/details.component.scss
@@ -64,20 +64,20 @@
     span {
         color: #e4531e;
         margin-top: 1%;
+        font-weight: bold;
     }
     label {
         font-size: 0.9rem;
-        font-weight: bold;
     }
 }
 
 .tematics {
     label {
         color: #fff;
-        background-color: #6394bf;
-        border-radius: 20px;
+        background-color: #3e82bd;
+        border-radius: 10px;
         margin: 1% 1%;
-        padding: 0% 2%;
+        padding: 0% 1%;
     }
 }
 .data-wrapper {
