--- a/src/app/_components/password-recovery/password-recovery.component.html
+++ b/src/app/_components/password-recovery/password-recovery.component.html
@@ -58,22 +58,22 @@
                     <label class="password-errors-label">Sua senha deve conter</label>
                     <div class="password-errors">
                         <div class="errors" *ngIf="!recovery.get('password').hasError('minLength')">
-                            <span class="dds__icons dds__check">
+                            <span class="dot">
                             </span>
                             <label>Mais de 8 caracteres</label>
                         </div>
                         <div class="errors" *ngIf="!recovery.get('password').hasError('hasUpperCase')">
-                            <span class="dds__icons dds__check">
+                            <span class="dot">
                             </span>
                             <label>Uma letra maiúscula </label>
                         </div>
                         <div class="errors" *ngIf="!recovery.get('password').hasError('hasNumeric')">
-                            <span class="dds__icons dds__check">
+                            <span class="dot">
                             </span>
                             <label>Um número</label>
                         </div>
                         <div class="errors" *ngIf="!recovery.get('password').hasError('specialCharacters')">
-                            <span class="dds__icons dds__check">
+                            <span class="dot">
                             </span>
                             <label>Um caractere especial</label>
                         </div>
