--- a/src/app/_components/password-recovery/password-recovery.component.scss
+++ b/src/app/_components/password-recovery/password-recovery.component.scss
@@ -6,7 +6,7 @@
   color: #000000;
   font-size: 3rem;
   font-weight: bold;
-  margin-bottom: 1%;
+  margin-bottom: 60px;
 }
 
 .form-group {
@@ -36,7 +36,7 @@ a {
   display: flex;
   padding: 1%;
   min-height: 40px;
-  min-width: 10rem;
+  min-width: 7rem;
   margin: 2% 0%;
   justify-content: center;
   align-items: center;
@@ -51,7 +51,7 @@ a {
   padding: .8%;
   cursor: pointer;
   min-height: 40px;
-  min-width: 10rem;
+  min-width: 7rem;
   margin: 0% 1% 0% 0%;
   justify-content: center;
   align-items: center;
@@ -91,11 +91,13 @@ a {
     color: #000000;
   }
 }
-.dds__check{
- font-size: 1.3rem !important;
- font-weight: bolder !important;
+.dot {
+  background: black;
+  width: 10px;
+  border-radius: 19px;
+  height: 10px;
+  margin: 7px;
 }
-
 .errors {
   label{
     margin-left: 2px;
