--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,15 @@
+.topbar-logo {
+  min-width: 100%;
+  height: 55px;
+  background-color: #f6f2dd;
+  display: flex;
+  align-items: center;
+  
+  .logo {
+    max-width: 100px;
+    margin-left: 2%;
+  }
+}
 .container-fluid{
   position: fixed;
 }
@@ -13,6 +25,7 @@
   min-width: 100%;
   margin-top: 15%;
 }
+
 .nav-item {
   height: 100%;
   width: 92%;
